--- a/index.html
+++ b/index.html
@@ -2,40 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
-  
-  <title>Frontend Mentor | QR code component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>QR code component</title>
 </head>
 <body>
-
-  <div class="card">
-  <div class="card__head">
-    <div class="card__image">
-      <img src="./images/image-qr-code.png">
+  <main>
+    <div class="card">
+    <div class="card__head">
+      <div class="card__image">
+        <img src="./images/image-qr-code.png">
+      </div>
     </div>
-  </div>
-  <div class="card__body">
-    <div class="card__title">
-      Improve your front-end skills by building projects
+    <div class="card__body">
+      <div class="card__title">
+        Improve your front-end skills by building projects
+      </div>
+      <div class="card__text">
+        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+      </div>
     </div>
-    <div class="card__text">
-      Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
     </div>
-  </div>
-  </div>
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Some Weeb</a>.
-  </div>
+  </main>
 </body>
 </html>
